--- a/java/res/xml/rowkeys_azerty3.xml
+++ b/java/res/xml/rowkeys_azerty3.xml
@@ -23,20 +23,22 @@
 >
     <Key
         latin:keySpec="w"
-        latin:moreKeys="!text/morekeys_w" />
+        latin:moreKeys="!text/morekeys_w,!text/actions_w,!text/qwertysyms_z" />
     <Key
-        latin:keySpec="x" />
+        latin:keySpec="x"
+        latin:moreKeys="!text/morekeys_x,!text/actions_x,!text/qwertysyms_x" />
     <Key
         latin:keySpec="c"
-        latin:moreKeys="!text/morekeys_c" />
+        latin:moreKeys="!text/morekeys_c,!text/actions_c,!text/qwertysyms_c" />
     <Key
         latin:keySpec="v"
-        latin:moreKeys="!text/morekeys_v" />
+        latin:moreKeys="!text/morekeys_v,!text/actions_v,!text/qwertysyms_v" />
     <Key
-        latin:keySpec="b" />
+        latin:keySpec="b"
+        latin:moreKeys="!text/morekeys_b,!text/actions_b,!text/qwertysyms_b" />
     <Key
         latin:keySpec="n"
-        latin:moreKeys="!text/morekeys_n" />
+        latin:moreKeys="!text/morekeys_n,!text/actions_n,!text/qwertysyms_n" />
     <switch>
         <case
             latin:keyboardLayoutSetElement="alphabetManualShifted|alphabetShiftLockShifted"
