--- a/java/res/xml/rowkeys_colemak1.xml
+++ b/java/res/xml/rowkeys_colemak1.xml
@@ -22,62 +22,44 @@
     xmlns:latin="http://schemas.android.com/apk/res-auto"
 >
     <Key
-        latin:keySpec="q"
-        latin:keyHintLabel="1"
-        latin:additionalMoreKeys="1" />
+        latin:keySpec="!text/keyspec_q"
+        latin:moreKeys="!text/number_1,!text/qwertysyms_q,!text/morekeys_q,!text/actions_q" />
     <Key
-        latin:keySpec="w"
-        latin:keyHintLabel="2"
-        latin:additionalMoreKeys="2"
-        latin:moreKeys="!text/morekeys_w" />
+        latin:keySpec="!text/keyspec_w"
+        latin:moreKeys="!text/number_2,!text/qwertysyms_w,!text/morekeys_w,!text/actions_w" />
     <Key
         latin:keySpec="f"
-        latin:keyHintLabel="3"
-        latin:additionalMoreKeys="3" />
+        latin:moreKeys="!text/number_3,!text/qwertysyms_e,!text/morekeys_f,!text/actions_f" />
     <Key
         latin:keySpec="p"
-        latin:keyHintLabel="4"
-        latin:additionalMoreKeys="4" />
+        latin:moreKeys="!text/number_4,!text/qwertysyms_r,!text/morekeys_p,!text/actions_p" />
     <Key
         latin:keySpec="g"
-        latin:keyHintLabel="5"
-        latin:additionalMoreKeys="5"
-        latin:moreKeys="!text/morekeys_g" />
+        latin:moreKeys="!text/number_5,!text/qwertysyms_t,!text/morekeys_g,!text/actions_g" />
     <Key
         latin:keySpec="j"
-        latin:keyHintLabel="6"
-        latin:additionalMoreKeys="6"
-        latin:moreKeys="!text/morekeys_j" />
+        latin:moreKeys="!text/number_6,!text/qwertysyms_y,!text/morekeys_j,!text/actions_j" />
     <Key
         latin:keySpec="l"
-        latin:keyHintLabel="7"
-        latin:additionalMoreKeys="7"
-        latin:moreKeys="!text/morekeys_l" />
+        latin:moreKeys="!text/number_7,!text/qwertysyms_u,!text/morekeys_l,!text/actions_l" />
     <Key
         latin:keySpec="u"
-        latin:keyHintLabel="8"
-        latin:additionalMoreKeys="8"
-        latin:moreKeys="!text/morekeys_u" />
+        latin:moreKeys="!text/number_8,!text/qwertysyms_i,!text/morekeys_u,!text/morekeys_misc_u,!text/actions_u" />
     <Key
         latin:keySpec="y"
-        latin:keyHintLabel="9"
-        latin:additionalMoreKeys="9"
-        latin:moreKeys="!text/morekeys_y" />
+        latin:moreKeys="!text/number_9,!text/qwertysyms_o,!text/morekeys_y,!text/actions_y" />
     <switch>
         <case
             latin:keyboardLayoutSetElement="alphabetManualShifted|alphabetShiftLockShifted"
         >
             <Key
                 latin:keySpec=":"
-                latin:keyHintLabel="0"
-                latin:additionalMoreKeys="0" />
+                latin:moreKeys="!text/number_0,!text/qwertysyms_p" />
         </case>
         <default>
             <Key
                 latin:keySpec=";"
-                latin:keyHintLabel="0"
-                latin:additionalMoreKeys="0"
-                latin:moreKeys=":" />
+                latin:moreKeys="!text/number_0,!text/qwertysyms_p" />
         </default>
     </switch>
 </merge>
