--- a/java/res/xml/rowkeys_qwertz1.xml
+++ b/java/res/xml/rowkeys_qwertz1.xml
@@ -21,53 +21,24 @@
 <merge
     xmlns:latin="http://schemas.android.com/apk/res-auto"
 >
-    <Key
-        latin:keySpec="!text/keyspec_q"
-        latin:keyHintLabel="1"
-        latin:additionalMoreKeys="1,\\%"
-        latin:moreKeys="!text/morekeys_q" />
-    <Key
-        latin:keySpec="!text/keyspec_w"
-        latin:keyHintLabel="2"
-        latin:additionalMoreKeys="2,\\\\"
-        latin:moreKeys="!text/morekeys_w" />
-    <Key
-        latin:keySpec="e"
-        latin:keyHintLabel="3"
-        latin:additionalMoreKeys="3,|"
-        latin:moreKeys="!text/morekeys_e" />
-    <Key
-        latin:keySpec="r"
-        latin:keyHintLabel="4"
-        latin:additionalMoreKeys="4,="
-        latin:moreKeys="!text/morekeys_r" />
-    <Key
-        latin:keySpec="t"
-        latin:keyHintLabel="5"
-        latin:additionalMoreKeys="5,!text/keyspec_left_square_bracket"
-        latin:moreKeys="!text/morekeys_t" />
+    <!-- q, w, e, r, t -->
+    <include
+        latin:keyboardLayout="@xml/rowkeys_qwerty1_left5" />
+
+    <!-- z, u, i, o, p -->
     <Key
         latin:keySpec="z"
-        latin:keyHintLabel="6"
-        latin:additionalMoreKeys="6,!text/keyspec_right_square_bracket"
-        latin:moreKeys="!text/morekeys_z" />
+        latin:moreKeys="!text/morekeys_z,!text/qwertysyms_z,!text/actions_z" />
     <Key
         latin:keySpec="u"
-        latin:keyHintLabel="7"
-        latin:additionalMoreKeys="7,!text/keyspec_less_than"
-        latin:moreKeys="!text/morekeys_u" />
+        latin:moreKeys="!text/morekeys_u,!text/morekeys_misc_u,!text/qwertysyms_u,!text/number_7,!text/actions_u" />
     <Key
         latin:keySpec="i"
-        latin:keyHintLabel="8"
-        latin:additionalMoreKeys="8,!text/keyspec_greater_than"
-        latin:moreKeys="!text/morekeys_i" />
+        latin:moreKeys="!text/morekeys_i,!text/morekeys_misc_i,!text/qwertysyms_i,!text/number_8,!text/actions_i" />
     <Key
         latin:keySpec="o"
-        latin:keyHintLabel="9"
-        latin:additionalMoreKeys="9,!text/keyspec_left_curly_bracket"
-        latin:moreKeys="!text/morekeys_o" />
+        latin:moreKeys="!text/morekeys_o,!text/morekeys_misc_o,!text/qwertysyms_o,!text/number_9,!text/actions_o" />
     <Key
         latin:keySpec="p"
-        latin:keyHintLabel="0"
-        latin:additionalMoreKeys="0,!text/keyspec_right_curly_bracket" />
+        latin:moreKeys="!text/morekeys_p,!text/qwertysyms_p,!text/number_0,!text/actions_p" />
 </merge>
