--- a/java/res/xml/rowkeys_qwertz3.xml
+++ b/java/res/xml/rowkeys_qwertz3.xml
@@ -22,36 +22,19 @@
     xmlns:latin="http://schemas.android.com/apk/res-auto"
 >
     <Key
-        latin:keySpec="y"
-        latin:keyHintLabel="*"
-        latin:additionalMoreKeys="*"
-        latin:moreKeys="!text/morekeys_y" />
+        latin:keySpec="!text/keyspec_y"
+        latin:moreKeys="!text/morekeys_y,!text/qwertysyms_y,!text/number_6,!text/actions_y" />
     <Key
-        latin:keySpec="x"
-        latin:keyHintLabel="&quot;"
-        latin:additionalMoreKeys="&quot;"
-        latin:moreKeys="!text/morekeys_x" />
+        latin:keySpec="!text/keyspec_x"
+        latin:moreKeys="!text/morekeys_x,!text/qwertysyms_x,!text/actions_x" />
     <Key
         latin:keySpec="c"
-        latin:keyHintLabel="'"
-        latin:additionalMoreKeys="'"
-        latin:moreKeys="!text/morekeys_c" />
+        latin:moreKeys="!text/morekeys_c,!text/morekeys_misc_c,!text/qwertysyms_c,!text/actions_c" />
     <Key
         latin:keySpec="v"
-        latin:keyHintLabel=":"
-        latin:additionalMoreKeys=":"
-        latin:moreKeys="!text/morekeys_v" />
-    <Key
-        latin:keySpec="b"
-        latin:keyHintLabel=";"
-        latin:additionalMoreKeys=";" />
-    <Key
-        latin:keySpec="n"
-        latin:keyHintLabel="!"
-        latin:additionalMoreKeys="!"
-        latin:moreKeys="!text/morekeys_n" />
-    <Key
-        latin:keySpec="m"
-        latin:keyHintLabel="\?"
-        latin:additionalMoreKeys="\?,/" />
+        latin:moreKeys="!text/morekeys_v,!text/qwertysyms_v,!text/actions_v" />
+
+    <!-- b, n, m -->
+    <include
+        latin:keyboardLayout="@xml/rowkeys_qwerty3_right3" />
 </merge>
