--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -13,6 +13,7 @@
     <string name="redo_action_title">Redo</string>
     <string name="text_edit_action_title">Text Editor</string>
     <string name="mem_debug_action_title">Debug Info</string>
+    <string name="more_actions_action_title">More Actions</string>
 
     <string name="amoled_dark_theme_name">AMOLED Dark Purple</string>
     <string name="classic_material_dark_theme_name">AOSP Material Dark</string>
