--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -15,6 +15,12 @@
     <string name="mem_debug_action_title">Debug Info</string>
     <string name="more_actions_action_title">More Actions</string>
 
+    <string name="action_kind_action_key">Action Key</string>
+    <string name="action_kind_pinned_key">Pinned Action(s)</string>
+    <string name="action_kind_favorites">Favorite Actions</string>
+    <string name="action_kind_more">More Actions</string>
+    <string name="action_kind_disabled">Hidden Actions</string>
+
     <string name="amoled_dark_theme_name">AMOLED Dark Purple</string>
     <string name="classic_material_dark_theme_name">AOSP Material Dark</string>
     <string name="classic_material_light_theme_name">AOSP Material Light</string>
