Add Turkish keyboard layout
Closes #242 on GitHub

Signed-off-by: Aleksandras Kostarevas <aleks076@protonmail.com>

--- a/java/res/values/donottranslate.xml
+++ b/java/res/values/donottranslate.xml
@@ -123,5 +123,7 @@
         <item>nordic</item>
         <item>tr:AsciiCapable,SupportTouchPositionCorrection,EmojiCapable</item>
         <item>qwerty</item>
+        <item>tr:AsciiCapable,SupportTouchPositionCorrection,EmojiCapable</item>
+        <item>turkish</item>
     </string-array>
 </resources>
