--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -13,7 +13,7 @@
     <string name="redo_action_title">Redo</string>
     <string name="text_edit_action_title">Text Editor</string>
     <string name="mem_debug_action_title">Debug Info</string>
-    <string name="more_actions_action_title">More Actions</string>
+    <string name="more_actions_action_title">All Actions</string>
 
     <string name="action_kind_action_key">Action Key</string>
     <string name="action_kind_pinned_key">Pinned Action(s)</string>
