--- a/java/res/xml/rowkeys_bepo1.xml
+++ b/java/res/xml/rowkeys_bepo1.xml
@@ -18,32 +18,32 @@
 >
     <Key
         latin:keySpec="b"
-        latin:moreKeys="!text/number_1,!text/qwertysyms_q,!text/morekeys_b,!text/actions_b" />
+        latin:moreKeys="!text/number_1,!text/qwertysyms_q,!text/morekeys_b" />
     <Key
         latin:keySpec="&#xE9;"
         latin:moreKeys="!text/number_2,!text/qwertysyms_w,&#xE8;" />
     <Key
         latin:keySpec="p"
-        latin:moreKeys="!text/number_3,!text/qwertysyms_e,!text/morekeys_p,!text/actions_p" />
+        latin:moreKeys="!text/number_3,!text/qwertysyms_e,!text/morekeys_p" />
     <Key
         latin:keySpec="o"
-        latin:moreKeys="!text/number_4,!text/qwertysyms_r,!text/morekeys_o,!text/morekeys_misc_o,!text/actions_o" />
+        latin:moreKeys="!text/number_4,!text/qwertysyms_r,!text/morekeys_o" />
     <Key
         latin:keySpec="v"
-        latin:moreKeys="!text/number_5,!text/qwertysyms_t,!text/morekeys_v,!text/actions_v" />
+        latin:moreKeys="!text/number_5,!text/qwertysyms_t,!text/morekeys_v" />
     <Key
         latin:keySpec="d"
-        latin:moreKeys="!text/number_6,!text/qwertysyms_y,!text/morekeys_d,!text/actions_d" />
+        latin:moreKeys="!text/number_6,!text/qwertysyms_y,!text/morekeys_d" />
     <Key
         latin:keySpec="l"
-        latin:moreKeys="!text/number_7,!text/qwertysyms_u,!text/morekeys_l,!text/actions_l" />
+        latin:moreKeys="!text/number_7,!text/qwertysyms_u,!text/morekeys_l" />
     <Key
         latin:keySpec="j"
-        latin:moreKeys="!text/number_8,!text/qwertysyms_i,!text/morekeys_j,!text/actions_j" />
+        latin:moreKeys="!text/number_8,!text/qwertysyms_i,!text/morekeys_j" />
     <Key
         latin:keySpec="z"
-        latin:moreKeys="!text/number_9,!text/qwertysyms_o,!text/morekeys_z,!text/actions_z" />
+        latin:moreKeys="!text/number_9,!text/qwertysyms_o,!text/morekeys_z" />
     <Key
         latin:keySpec="w"
-        latin:moreKeys="!text/number_0,!text/qwertysyms_p,!text/morekeys_w,!text/actions_w" />
+        latin:moreKeys="!text/number_0,!text/qwertysyms_p,!text/morekeys_w" />
 </merge>
