--- a/java/res/xml/rowkeys_bepo3.xml
+++ b/java/res/xml/rowkeys_bepo3.xml
@@ -18,23 +18,23 @@
 >
     <Key
         latin:keySpec="y"
-        latin:moreKeys="!text/qwertysyms_z,!text/morekeys_y,!text/actions_y" />
+        latin:moreKeys="!text/qwertysyms_z,!text/morekeys_y" />
     <Key
         latin:keySpec="x"
-        latin:moreKeys="!text/qwertysyms_x,!text/morekeys_x,!text/actions_x" />
+        latin:moreKeys="!text/qwertysyms_x,!text/morekeys_x" />
     <Key
         latin:keySpec="k"
-        latin:moreKeys="!text/qwertysyms_c,!text/morekeys_k,!text/actions_k" />
+        latin:moreKeys="!text/qwertysyms_c,!text/morekeys_k" />
     <Key
         latin:keySpec="q"
-        latin:moreKeys="!text/qwertysyms_v,!text/morekeys_q,!text/actions_q" />
+        latin:moreKeys="!text/qwertysyms_v,!text/morekeys_q" />
     <Key
         latin:keySpec="g"
-        latin:moreKeys="!text/qwertysyms_b,!text/morekeys_g,!text/actions_g" /> />
+        latin:moreKeys="!text/qwertysyms_b,!text/morekeys_g" /> />
     <Key
         latin:keySpec="h"
-        latin:moreKeys="!text/qwertysyms_n,!text/morekeys_h,!text/actions_h" />
+        latin:moreKeys="!text/qwertysyms_n,!text/morekeys_h" />
     <Key
         latin:keySpec="f"
-        latin:moreKeys="!text/qwertysyms_m,!text/morekeys_f,!text/actions_f" />
+        latin:moreKeys="!text/qwertysyms_m,!text/morekeys_f" />
 </merge>
