--- a/java/res/xml/rowkeys_qwerty1_right5.xml
+++ b/java/res/xml/rowkeys_qwerty1_right5.xml
@@ -23,17 +23,17 @@
 >
     <Key
         latin:keySpec="!text/keyspec_y"
-        latin:moreKeys="!text/morekeys_y,!text/qwertysyms_y,!text/number_6,!text/actions_y" />
+        latin:moreKeys="!text/morekeys_y,!text/qwertysyms_y,!text/number_6" />
     <Key
         latin:keySpec="u"
-        latin:moreKeys="!text/morekeys_u,!text/morekeys_misc_u,!text/qwertysyms_u,!text/number_7,!text/actions_u" />
+        latin:moreKeys="!text/morekeys_u,!text/qwertysyms_u,!text/number_7" />
     <Key
         latin:keySpec="i"
-        latin:moreKeys="!text/morekeys_i,!text/morekeys_misc_i,!text/qwertysyms_i,!text/number_8,!text/actions_i" />
+        latin:moreKeys="!text/morekeys_i,!text/qwertysyms_i,!text/number_8" />
     <Key
         latin:keySpec="o"
-        latin:moreKeys="!text/morekeys_o,!text/morekeys_misc_o,!text/qwertysyms_o,!text/number_9,!text/actions_o" />
+        latin:moreKeys="!text/morekeys_o,!text/qwertysyms_o,!text/number_9" />
     <Key
         latin:keySpec="p"
-        latin:moreKeys="!text/morekeys_p,!text/qwertysyms_p,!text/number_0,!text/actions_p" />
+        latin:moreKeys="!text/morekeys_p,!text/qwertysyms_p,!text/number_0" />
 </merge>
