--- a/java/res/xml/rowkeys_qwerty3_left4.xml
+++ b/java/res/xml/rowkeys_qwerty3_left4.xml
@@ -23,14 +23,14 @@
 >
     <Key
         latin:keySpec="z"
-        latin:moreKeys="!text/morekeys_z,!text/qwertysyms_z,!text/actions_z" />
+        latin:moreKeys="!text/morekeys_z,!text/qwertysyms_z" />
     <Key
         latin:keySpec="!text/keyspec_x"
-        latin:moreKeys="!text/morekeys_x,!text/qwertysyms_x,!text/actions_x" />
+        latin:moreKeys="!text/morekeys_x,!text/qwertysyms_x" />
     <Key
         latin:keySpec="c"
-        latin:moreKeys="!text/morekeys_c,!text/morekeys_misc_c,!text/qwertysyms_c,!text/actions_c" />
+        latin:moreKeys="!text/morekeys_c,!text/qwertysyms_c" />
     <Key
         latin:keySpec="v"
-        latin:moreKeys="!text/morekeys_v,!text/qwertysyms_v,!text/actions_v" />
+        latin:moreKeys="!text/morekeys_v,!text/qwertysyms_v" />
 </merge>
