--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -36,6 +36,7 @@
     <string name="steel_gray_theme_name">Steel Gray</string>
     <string name="sunflower_theme_name">Sunflower</string>
     <string name="cotton_candy_theme_name">Cotton Candy</string>
+    <string name="hot_dog_theme_name">Hot Dog</string>
 
     <string name="dynamic_system_theme_name">Dynamic Auto</string>
     <string name="dynamic_light_theme_name">Dynamic Light</string>
